--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <nav>
                <ul>
             
-                     <li><a href="https://www.linkedin.com/in/daniel-cornier-399016ba/">
+                    <li><a href="https://www.linkedin.com/in/daniel-cornier-399016ba/">
                      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/ca/LinkedIn_logo_initials.png/600px-LinkedIn_logo_initials.png" alt="linkedin logo"
                      width="30rem"height="30rem"> linkedin
                      </a>
@@ -42,6 +42,38 @@
     I received my Bachelor's Degree in business and was employed in the GOV private sector for 5 years as the Director of Training for one of the worlds largest K9 training facilities. My passions have always been in tech and the automotive industry. 
     I started my tech journey in early 2020 and I currently work for a tech startup based out of Denver, Colorado named Blinker. Blinker specializes in tech for auto industry. I am currently a QA software analyst. 
     My goal for this year is to become a Jr /Front end developer for either the current company I work for or another company similar.</p>
+
+    <p> Ten favorite things to do</p>
+    <ol>
+      <li>Spendtime with my family</li>
+      <li>Workout</li>
+      <li>Wakeboard</li>
+      <li>Skateboard</li>
+      <li>Code</li>
+      <li>Workout on race cars</li>
+      <li>Drive race cars</li>
+      <li>Hang with friends </li>
+      <li>Eat good food </li>
+      <li>Cook good food </li>
+    </ol>
+<p>Work experience and education </p>
+  <ul>
+    <li>High school diploma</li>
+    <li>Universal Technical Institute </li>
+    <li>Marine Corps boot camp </li>
+    <li>Military Police academy</li>
+    <li>K9 School</li>
+    <li>Bachelors degree in business </li>
+    <li>Code fellows</li>
+    <li>Automotive service technician</li>
+    <li>Marine Corps</li>
+    <li>K9 instructor</li>
+    <li>Director of Training</li>
+    <li>Field Operation Manager</li>
+    <li>QA Analyst</li>
+  </ul>
+
+
  <footer>
     <p>This page was created by Daniel C</p>
  </footer>   
