about me extension

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       <li>Wakeboard</li>
       <li>Skateboard</li>
       <li>Code</li>
-      <li>Workout on race cars</li>
+      <li>Work on race cars</li>
       <li>Drive race cars</li>
       <li>Hang with friends </li>
       <li>Eat good food </li>
